# Frontier-Model-Self-Bias

./: LICENSE  NOTICE  README.md  pyproject.toml  run.sh
config/: experiment.example.yaml  experiment.gpt-haiku.yaml  experiment.mock.yaml  experiment.ollama.yaml  experiment.openrouter.yaml  experiment.strong.yaml  pricing.yaml
dashboard/: app.py  ui.py
dashboard/pages/: 1_Configure.py  2_Run.py  3_Results.py
data/manifests/: 29fe9e0904273004.json
data/reports/: 29fe9e0904273004.json
data/runs/29fe9e0904273004/generations/: generations.jsonl
data/runs/29fe9e0904273004/judgments/: judgments.jsonl
data/runs/29fe9e0904273004/probes/: probes.jsonl
data/runs/29fe9e0904273004/tasks/: tasks.jsonl
data/tasks/seeds/: example_prompts.csv
docs/: ARCHITECTURE.md  DECISIONS.md  METRICS.md  RESEARCH_PLAN.md  ROADMAP.md  USER_GUIDE.md
src/selfbias/: cache.py  check.py  checkers.py  cli.py  config.py  costs.py  excel.py  manifest.py  pipeline.py  plan.py  promptgen.py  prompts.py  schemas.py  storage.py  structured.py  synthetic.py  tasks.py  tokens.py
src/selfbias/analysis/: __init__.py  attributability.py  bootstrap.py  curves.py  onset.py  reference.py  regression.py  report.py
src/selfbias/metrics/: __init__.py  core.py
src/selfbias/providers/: __init__.py  anthropic.py  base.py  google.py  mock.py  openai.py  openai_compatible.py
tests/: conftest.py  test_analysis.py  test_cache.py  test_check.py  test_costs.py  test_dashboard.py  test_excel.py  test_manifest.py  test_metrics.py  test_mock_provider.py  test_pipeline.py  test_providers_flex.py  test_schemas.py  test_structured.py  test_w2_generation_judging.py  test_w4_promptgen.py
