[project]
name = "selfbias"
version = "0.3.0"
description = "Executable research program measuring self-preference bias in frontier LLM judges."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "numpy>=1.26",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "duckdb>=0.10",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    "streamlit>=1.33",
    "altair>=5.2",
]

[project.optional-dependencies]
# Real-provider SDKs. Not required for Phase 0 (mock provider only); installed when
# real keys are used from Phase 1 onward. Adapters import these lazily.
providers = [
    "anthropic>=0.34",
    "google-genai>=0.3",
    "openai>=1.40",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
selfbias = "selfbias.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/selfbias"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    # `str, Enum` is the pydantic-idiomatic pattern for JSON-serializable enums we rely
    # on; StrEnum would change str() semantics. Intentional.
    "UP042",
    # Typer expects `typer.Argument(...)` / `typer.Option(...)` as parameter defaults;
    # this is the framework idiom, not a mutable-default bug.
    "B008",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
